# Alco

./: .gitignore  .gitmodules  Alco.sln  Alco.slnx  CAMERA_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Directory.Build.props  README.md  TODO.md  Vocore.code-workspace  Vocore.sln  azure-pipelines.yml  build&updateToPG.ps1  build.bat  build.cmd  build.ps1  test.bat
.Note/: Issue.md
.claude/: settings.local.json
.cursor/: mcp.json
AssetBundles/: AssetBundles  AssetBundles.manifest  vocore  vocore.manifest
BuildScripts/: build_all.bat  build_all.ps1  build_core.ps1  build_playground.ps1  build_rw.ps1  test.bat
Docs/: docfx.json  filter.yml
Examples/: CameraUsageExample.cs
Generator/: BaseGenerator.cs  BuiltInAssetGenerator.cs  FixedStringGenerator.cs  FixedString{n}.tt  FontCharsetGenerator.cs  Generator.cs  Generator.csproj  GeneratorMath.cs  Program.cs
Note/: GraphicsBindLayout.md  Issue.md
RuntimeAssemblyLoader/: AssemblyLoader.cs  RuntimeAssemblyLoader.csproj
Terminal/: BuiltinCommands.cs  CommandAutocomplete.cs  CommandLog.cs  CommandShell.cs  Entry.cs  RegisterCommandAttribute.cs  Terminal.cs  Terminal.csproj
Tool/NativeBuild/: CMakeLists.txt  build-android.sh  build.ps1  build.sh
UnityToolBox/: UnityToolBox.csproj
Vocore.Animation/: CurveCubicBezier.cs  CurveCubicHermite.cs  CurveCubicSpline.cs  CurveLinear.cs  ICurve.cs  KeyFrame.cs  Vocore.Animation.csproj
Vocore.AssetsLib/: Vocore.AssetsLib.csproj  packages.config
Vocore.Atlas/: TextureAtlas.cs  Vocore.Atlas.csproj
Vocore.Compute/: Class1.cs  Vocore.Compute.csproj
Vocore.EmbeddedAssets/: AnimatedRenderManager.cs  AnimatedRenderQueue.cs  AssetsManager.cs  Vocore.EmbeddedAssets.csproj
Vocore.Engine/: Vocore.Engine.csproj
Vocore.Framework/: Vocore.Framework.csproj
Vocore.Renderer/: Class1.cs  Exceptions.cs  Vocore.Renderer.csproj
Vocore.Rendering/: Engine.cs  Mesh.cs  RenderPipeline.cs  ShaderLoader.cs  Vertex.cs
Vocore.Serialization/: Vocore.Serialization.csproj  XmlParser.cs
Vocore.Test/: CurveDrawer.cs  Entry.cs  (+5 more)
Vocore.Test.Engine/: App.cs  Game.cs  Program.cs  Vocore.Test.Engine.csproj
Vocore.Test.Unity/: Commands.cs  Entry.cs  Vocore.Test.Unity.csproj
(+3836 files in other folders)
